# ucd-csci2312-pa1

./: CMakeLists.txt  Point.cpp  Point.h  PointTests.cpp  PointTests.h  README.md  TG.cpp  area.cpp  main.cpp  point.cpp
